--- a/pubsub/csharp/subscriber/Dockerfile
+++ b/pubsub/csharp/subscriber/Dockerfile
@@ -1,17 +1,22 @@
-FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build-env
-WORKDIR /app
+# Learn about building .NET container images:
+# https://github.com/dotnet/dotnet-docker/blob/main/samples/README.md
+FROM --platform=$BUILDPLATFORM mcr.microsoft.com/dotnet/sdk:8.0 AS build
+ARG TARGETARCH
+WORKDIR /source
 
 # Copy everything
-COPY . ./
-# Restore as distinct layers
-RUN dotnet restore
+COPY /*.csproj .
+RUN dotnet restore -a $TARGETARCH
+
+
 # Build and publish a release
-RUN dotnet publish -c Release -o out
+COPY . .
+RUN dotnet publish -a $TARGETARCH --no-restore -o /app
 
 # Build runtime image
 FROM mcr.microsoft.com/dotnet/aspnet:8.0
-WORKDIR /app
 EXPOSE 5001
 ENV ASPNETCORE_URLS=http://+:5001
-COPY --from=build-env /app/out .
+WORKDIR /app
+COPY --from=build /app .
 ENTRYPOINT ["dotnet", "csharp.dll"]
