--- a/pubsub/javascript/publisher/Dockerfile
+++ b/pubsub/javascript/publisher/Dockerfile
@@ -3,8 +3,8 @@ ENV NODE_ENV=production
 EXPOSE 5001
 ENV PORT 5001
 WORKDIR /usr/src/app
-COPY ["package.json", "package-lock.json*", "npm-shrinkwrap.json*", "./"]
-RUN npm install --production --silent && mv node_modules ../
+COPY package*.json .
+RUN npm ci --silent && mv node_modules ../
 COPY . .
 RUN chown -R node /usr/src/app
 USER node
