--- a/.github/workflows/keyvalue-java.yaml
+++ b/.github/workflows/keyvalue-java.yaml
@@ -3,7 +3,7 @@ name: Build and Push KeyValue Java Docker Image
 on:
   push:
     branches:
-      - main
+      - golang
     paths:
       - 'keyvalue/java/**'
 
