--- a/.github/workflows/keyvalue-csharp.yaml
+++ b/.github/workflows/keyvalue-csharp.yaml
@@ -3,7 +3,7 @@ name: Build and Push KeyValue C# Docker Image
 on:
   push:
     branches:
-      - main
+      - golang
     paths:
       - 'keyvalue/csharp/**'
 
