--- a/.github/workflows/keyvalue-go.yaml
+++ b/.github/workflows/keyvalue-go.yaml
@@ -3,7 +3,7 @@ name: Build and Push KeyValue Go Docker Image
 on:
   push:
     branches:
-      - main
+      - golang
     paths:
       - 'keyvalue/go/**'
 
