--- a/.github/workflows/pubsub-csharp.yaml
+++ b/.github/workflows/pubsub-csharp.yaml
@@ -3,7 +3,7 @@ name: Build and Push PubSub C# Docker Image
 on:
   push:
     branches:
-      - main
+      - golang
     paths:
       - 'pubsub/csharp/**'
 
