--- a/.github/workflows/pubsub-go.yaml
+++ b/.github/workflows/pubsub-go.yaml
@@ -3,7 +3,7 @@ name: Build and Push PubSub Go Docker Image
 on:
   push:
     branches:
-      - main
+      - golang
     paths:
       - 'pubsub/go/**'
 
