--- a/pubsub/javascript/Dockerfile
+++ b/pubsub/javascript/Dockerfile
@@ -1,5 +1,5 @@
 # Use an official Python base image
-FROM python:3.9-slim
+FROM python:3.11
 
 # Install Node.js
 RUN apt-get update && apt-get install -y curl gnupg && \
