--- a/pubsub/java/Dockerfile
+++ b/pubsub/java/Dockerfile
@@ -2,11 +2,13 @@ FROM openjdk:11
 
 # Install Python and other necessary packages
 RUN apt-get update && apt-get install -y \
+  curl \
+  gnupg \
+  maven \
   python3 \
   python3-pip \
   python3-venv \
-  curl \
-  gnupg \
+  && apt-get clean \
   && rm -rf /var/lib/apt/lists/*
 
 # Set the working directory
@@ -15,6 +17,9 @@ WORKDIR /app
 # Copy sample code
 COPY . .
 
+# Make scripts executable
+RUN chmod +x /app/scaffold.sh /app/scaffold.py
+
 # Install Diagrid CLI
 RUN curl -o- https://downloads.diagrid.io/cli/install.sh | bash && \
   mv ./diagrid /usr/local/bin/diagrid && \
@@ -22,9 +27,6 @@ RUN curl -o- https://downloads.diagrid.io/cli/install.sh | bash && \
 
 # Create the directory for Diagrid credentials
 RUN mkdir -p /root/.diagrid
-
-# Make scripts executable
-RUN chmod +x /app/scaffold.sh /app/scaffold.py
 
 # Set the config file name 
 ENV CONFIG_FILE="dev-pubsub-java-project-container.yaml"
