java kv quickstart rework & fix bugs

--- a/keyvalue/java/Dockerfile
+++ b/keyvalue/java/Dockerfile
@@ -1,36 +1,42 @@
-# Use a Java base image
 FROM openjdk:11
+
+# Install Python and other necessary packages
+RUN apt-get update && apt-get install -y \
+  curl \
+  gnupg \
+  maven \
+  python3 \
+  python3-pip \
+  python3-venv \
+  && apt-get clean \
+  && rm -rf /var/lib/apt/lists/*
 
 # Set the working directory
 WORKDIR /app
 
-# Install Maven
-RUN apt-get update && apt-get install -y maven
-
-# Install Diagrid CLI
-RUN curl -o- https://downloads.diagrid.io/cli/install.sh | bash
-
-# Ensure the Diagrid CLI is executable globally
-RUN mv ./diagrid /usr/local/bin/diagrid || echo "Diagrid binary not found!"
-RUN chmod +x /usr/local/bin/diagrid
-
-# Copy the project files
+# Copy sample code
 COPY . .
 
-# Install Java dependencies
-RUN mvn clean install
+# Make scripts executable
+RUN chmod +x /app/scaffold.py
+
+# Install Diagrid CLI
+RUN curl -o- https://downloads.diagrid.io/cli/install.sh | bash && \
+  mv ./diagrid /usr/local/bin/diagrid && \
+  chmod +x /usr/local/bin/diagrid
 
 # Create the directory for Diagrid credentials
 RUN mkdir -p /root/.diagrid
 
-# Copy the entrypoint script
-COPY entrypoint.sh /usr/local/bin/
+# Set the config file name 
+ENV CONFIG_FILE="dev-kv-java-project-container.yaml"
 
-# Make the entrypoint script executable
-RUN chmod +x /usr/local/bin/entrypoint.sh
+# Copy the entrypoint script
+COPY entrypoint.sh /usr/local/bin/entrypoint.sh
+RUN chmod +x /usr/local/bin/entrypoint.sh 
 
 # Set the entrypoint script to run when the container starts
-ENTRYPOINT ["entrypoint.sh"]
+ENTRYPOINT ["/usr/local/bin/entrypoint.sh"]
 
 # Expose the application port
 EXPOSE 5001
