--- a/workflow/python/Dockerfile
+++ b/workflow/python/Dockerfile
@@ -15,16 +15,16 @@ RUN ls -la venv/bin/
 
 # Install Diagrid CLI 
 RUN curl -o- https://downloads.diagrid.io/cli/install.sh | bash
-RUN mv ./diagrid /usr/local/bin/diagrid || echo "Diagrid binary not found!"
+RUN mv ./diagrid /usr/local/bin/diagrid
 RUN chmod +x /usr/local/bin/diagrid
 
 # Copy sample code
 COPY . .
 
 # Activate virtual environment and update pip and install certifi
-RUN . venv/bin/activate && pip install --upgrade pip && pip install certifi
-# Install Python dependencies
-RUN . venv/bin/activate && pip install --no-cache-dir -r requirements.txt
+RUN ./venv/bin/pip install --upgrade pip
+RUN ./venv/bin/pip install certifi
+RUN ./venv/bin/pip install --no-cache-dir -r requirements.txt
 
 # Ensure Python uses the correct certificates
 ENV REQUESTS_CA_BUNDLE=/etc/ssl/certs/ca-certificates.crt
