--- a/invocation/java/request/pom.xml
+++ b/invocation/java/request/pom.xml
@@ -10,10 +10,10 @@
     <relativePath /> <!-- lookup parent from repository -->
   </parent>
   <groupId>com.service</groupId>
-  <artifactId>Main</artifactId>
+  <artifactId>Request</artifactId>
   <version>0.0.1-SNAPSHOT</version>
-  <name>Main</name>
-  <description>Diagrid Catalyst Java Quickstart</description>
+  <name>Request</name>
+  <description>Diagrid Catalyst Java Request Quickstart</description>
   <properties>
     <java.version>11</java.version>
   </properties>
