--- a/keyvalue/java/pom.xml
+++ b/keyvalue/java/pom.xml
@@ -9,10 +9,10 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.service</groupId>
-	<artifactId>Main</artifactId>
+	<artifactId>order-app</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>Main</name>
-	<description>Diagrid Catalyst Java Quickstart</description>
+	<name>order-app</name>
+	<description>Catalyst State Quickstart</description>
 	<properties>
 		<java.version>11</java.version>
 	</properties>
