--- a/.github/workflows/pubsub_python.yaml
+++ b/.github/workflows/pubsub_python.yaml
@@ -1,4 +1,4 @@
-name: java pubsub quickstart
+name: python pubsub quickstart
 
 on:
   push:
@@ -7,8 +7,8 @@ on:
     branches:
       - main
     paths:
-      - .github/workflows/pubsub/java.yaml
-      - pubsub/java/*
+      - .github/workflows/pubsub_python.yaml
+      - pubsub/python/*
 
 jobs:
   build:
@@ -21,25 +21,26 @@ jobs:
     if: github.repository_owner == 'diagridio'
     steps:
       - uses: actions/checkout@v3
-      - uses: actions/setup-java@v3
+      - uses: actions/setup-python@v4
         with:
-          distribution: "temurin"
-          java-version: "11"
+          python-version: "3.12"
+          cache: "pip"
 
       - name: build local
         run: |
-          cd pubsub/java
-          mvn clean install -f ./publisher && mvn clean install -f ./subscriber
+          cd python
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt --target ./publisher && pip install -r requirements.txt --target ./subscriber
 
-      - name: build publisher container
+      - name: build publisher image
         run: |
-          cd pubsub/java/publisher
-          docker buildx build --platform linux/amd64 -t pubsub-java-publisher .
+          cd python
+          docker buildx build --platform linux/amd64 -t pubsub-python-publisher .
 
-      - name: build subscriber container
+      - name: build subscriber image
         run: |
-          cd pubsub/java/subscriber
-          docker buildx build --platform linux/amd64 -t pubsub-java-subscriber .
+          cd python
+          docker buildx build --platform linux/amd64 -t pubsub-python-subscriber .
 
       - name: Configure AWS credentials
         if: github.event_name != 'pull_request'
@@ -47,6 +48,7 @@ jobs:
         with:
           role-to-assume: ${{ vars.AWS_CI_ROLE }}
           aws-region: ${{ vars.AWS_CI_REGION }}
+
       - name: Login to Amazon ECR
         if: github.event_name != 'pull_request'
         id: login-ecr
@@ -57,15 +59,15 @@ jobs:
       - name: push publisher image
         if: github.event_name != 'pull_request'
         env:
-          PUBLIC_ECR: "${{ steps.login-ecr.outputs.registry }}/${{ vars.AWS_PUBLIC_ECR_ALIAS }}/pubsub-java-publisher"
+          PUBLIC_ECR: "${{ steps.login-ecr.outputs.registry }}/${{ vars.AWS_PUBLIC_ECR_ALIAS }}/pubsub-python-publisher"
         run: |
-          docker tagpubsub-java-publisher:latest  $PUBLIC_ECR:latest
+          docker tag pubsub-python-publisher:latest $PUBLIC_ECR:latest
           docker push $PUBLIC_ECR:latest
 
       - name: push subscriber image
         if: github.event_name != 'pull_request'
         env:
-          PUBLIC_ECR: "${{ steps.login-ecr.outputs.registry }}/${{ vars.AWS_PUBLIC_ECR_ALIAS }}/pubsub-java-subscriber"
+          PUBLIC_ECR: "${{ steps.login-ecr.outputs.registry }}/${{ vars.AWS_PUBLIC_ECR_ALIAS }}/pubsub-python-subscriber"
         run: |
-          docker tag pubsub-java-subscriber:latest  $PUBLIC_ECR:latest
+          docker tag pubsub-python-subscriber:latest $PUBLIC_ECR:latest
           docker push $PUBLIC_ECR:latest
