--- a/.github/workflows/state_java.yaml
+++ b/.github/workflows/state_java.yaml
@@ -1,4 +1,4 @@
-name: javascript state quickstart
+name: java state quickstart
 
 on:
   push:
@@ -7,8 +7,8 @@ on:
     branches:
       - main
     paths:
-      - .github/workflows/state/javascript.yaml
-      - state/javascript/*
+      - .github/workflows/state_java.yaml
+      - state/java/*
 
 jobs:
   build:
@@ -21,22 +21,20 @@ jobs:
     if: github.repository_owner == 'diagridio'
     steps:
       - uses: actions/checkout@v3
-      - name: Use Node.js 16.x
-        uses: actions/setup-node@v3
+      - uses: actions/setup-java@v3
         with:
-          node-version: 16.x
-          cache: "npm"
-          cache-dependency-path: "**/package-lock.json"
+          distribution: "temurin"
+          java-version: "11"
 
       - name: build local
         run: |
-          cd state/javascript
-          npm install
+          cd state/java
+          mvn clean install
 
-      - name: build publisher image
+      - name: build order-app image
         run: |
-          cd state/javascript/publisher
-          docker buildx build --platform linux/amd64 -t state-javascript .
+          cd state/java/client
+          docker buildx build --platform linux/amd64 -t state-java .
 
       - name: Configure AWS credentials
         if: github.event_name != 'pull_request'
@@ -44,7 +42,6 @@ jobs:
         with:
           role-to-assume: ${{ vars.AWS_CI_ROLE }}
           aws-region: ${{ vars.AWS_CI_REGION }}
-
       - name: Login to Amazon ECR
         if: github.event_name != 'pull_request'
         id: login-ecr
@@ -55,7 +52,7 @@ jobs:
       - name: push order-app image
         if: github.event_name != 'pull_request'
         env:
-          PUBLIC_ECR: "${{ steps.login-ecr.outputs.registry }}/${{ vars.AWS_PUBLIC_ECR_ALIAS }}/state-javascript"
+          PUBLIC_ECR: "${{ steps.login-ecr.outputs.registry }}/${{ vars.AWS_PUBLIC_ECR_ALIAS }}/state-java"
         run: |
-          docker tag state-javascript:latest  $PUBLIC_ECR:latest
+          docker tag state-java:latest  $PUBLIC_ECR:latest
           docker push $PUBLIC_ECR:latest
