--- a/.github/workflows/state_javascript.yaml
+++ b/.github/workflows/state_javascript.yaml
@@ -1,4 +1,4 @@
-name: python state quickstart
+name: javascript state quickstart
 
 on:
   push:
@@ -7,8 +7,8 @@ on:
     branches:
       - main
     paths:
-      - .github/workflows/state/python.yaml
-      - state/python/*
+      - .github/workflows/state_javascript.yaml
+      - state/javascript/*
 
 jobs:
   build:
@@ -21,21 +21,22 @@ jobs:
     if: github.repository_owner == 'diagridio'
     steps:
       - uses: actions/checkout@v3
-      - uses: actions/setup-python@v4
+      - name: Use Node.js 16.x
+        uses: actions/setup-node@v3
         with:
-          python-version: "3.12"
-          cache: "pip"
+          node-version: 16.x
+          cache: "npm"
+          cache-dependency-path: "**/package-lock.json"
 
       - name: build local
         run: |
-          cd python
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
+          cd state/javascript
+          npm install
 
-      - name: build order-app image
+      - name: build publisher image
         run: |
-          cd python
-          docker buildx build --platform linux/amd64 -t state-python .
+          cd state/javascript/publisher
+          docker buildx build --platform linux/amd64 -t state-javascript .
 
       - name: Configure AWS credentials
         if: github.event_name != 'pull_request'
@@ -54,7 +55,7 @@ jobs:
       - name: push order-app image
         if: github.event_name != 'pull_request'
         env:
-          PUBLIC_ECR: "${{ steps.login-ecr.outputs.registry }}/${{ vars.AWS_PUBLIC_ECR_ALIAS }}/state-python"
+          PUBLIC_ECR: "${{ steps.login-ecr.outputs.registry }}/${{ vars.AWS_PUBLIC_ECR_ALIAS }}/state-javascript"
         run: |
-          docker tag state-python:latest $PUBLIC_ECR:latest
+          docker tag state-javascript:latest  $PUBLIC_ECR:latest
           docker push $PUBLIC_ECR:latest
