--- a/.github/workflows/invoke_python.yaml
+++ b/.github/workflows/invoke_python.yaml
@@ -3,7 +3,13 @@ name: python invocation quickstart
 on:
   push:
     branches:
-      - "ongoing-fixes"
+      - ongoing-fixes
+    paths:
+      - .github/workflows/invoke_python.yaml
+      - invocation/python/**
+  pull_request:
+    branches:
+      - main
     paths:
       - .github/workflows/invoke_python.yaml
       - invocation/python/**
@@ -15,7 +21,7 @@ jobs:
       contents: "read"
       id-token: "write"
     environment: shared-production
-    # Only run on main repo (not on forks)
+
     if: github.repository_owner == 'diagridio'
     steps:
       - uses: actions/checkout@v3
@@ -30,15 +36,17 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r  ./client/requirements.txt && pip install -r ./server/requirements.txt
 
+  deploy:
+    runs-on: ubuntu-latest
+    if: github.event_name != 'pull_request'
+    steps:
       - name: Configure AWS credentials
-        if: github.event_name != 'pull_request'
         uses: aws-actions/configure-aws-credentials@v4
         with:
           role-to-assume: ${{ vars.AWS_CI_ROLE }}
           aws-region: ${{ vars.AWS_CI_REGION }}
 
       - name: Login to Amazon ECR
-        if: github.event_name != 'pull_request'
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@v2
         with:
