--- a/.github/workflows/invoke_python.yaml
+++ b/.github/workflows/invoke_python.yaml
@@ -56,8 +56,8 @@ jobs:
         uses: docker/setup-buildx-action@v3.6.1
 
       - name: build and push client image
-        working-directory: invocation/python/client
         run: |
+          cd invocation/python/client
           docker buildx build --platform linux/amd64,linux/arm64 -t ${{ steps.login-ecr.outputs.registry }}/${{ vars.AWS_PUBLIC_ECR_ALIAS }}/invoke-python-client-qs .
 
       - name: build and push server image
