--- a/.github/workflows/invoke_csharp.yaml
+++ b/.github/workflows/invoke_csharp.yaml
@@ -3,10 +3,16 @@ name: csharp invocation quickstart
 on:
   push:
     branches:
-      - "ongoing-fixes"
+      - main
     paths:
       - .github/workflows/invoke_csharp.yaml
       - invocation/csharp/**
+  pull_request:
+    branches:
+      - main
+    paths:
+      - .github/workflows/csharp.yaml
+      - csharp/*
 
 jobs:
   build:
@@ -44,14 +50,17 @@ jobs:
           registry-type: public
 
       - name: Set up Docker Buildx
+        if: github.event_name != 'pull_request'
         uses: docker/setup-buildx-action@v3.6.1
 
       - name: build and push client image
+        if: github.event_name != 'pull_request'
         working-directory: invocation/csharp/client
         run: |
           docker buildx build --platform linux/amd64,linux/arm64 -t ${{ steps.login-ecr.outputs.registry }}/${{ vars.AWS_PUBLIC_ECR_ALIAS }}/invoke-csharp-client-qs . --push
 
       - name: build and push server image
+        if: github.event_name != 'pull_request'
         working-directory: invocation/csharp/server
         run: |
           docker buildx build --platform linux/amd64,linux/arm64 -t ${{ steps.login-ecr.outputs.registry }}/${{ vars.AWS_PUBLIC_ECR_ALIAS }}/invoke-csharp-server-qs . --push
