--- a/.github/workflows/invoke_javascript.yaml
+++ b/.github/workflows/invoke_javascript.yaml
@@ -3,7 +3,13 @@ name: javascript invocation quickstart
 on:
   push:
     branches:
-      - "ongoing-fixes"
+      - main
+    paths:
+      - .github/workflows/invoke_javascript.yaml
+      - invocation/javascript/**
+  pull_request:
+    branches:
+      - main
     paths:
       - .github/workflows/invoke_javascript.yaml
       - invocation/javascript/**
@@ -15,7 +21,7 @@ jobs:
       contents: "read"
       id-token: "write"
     environment: shared-production
-    # Only run on main repo (not on forks)
+
     if: github.repository_owner == 'diagridio'
     steps:
       - uses: actions/checkout@v3
@@ -46,14 +52,17 @@ jobs:
           registry-type: public
 
       - name: Set up Docker Buildx
+        if: github.event_name != 'pull_request'
         uses: docker/setup-buildx-action@v3.6.1
 
       - name: build and push client container
+        if: github.event_name != 'pull_request'
         working-directory: invocation/javascript/server
         run: |
           docker buildx build --platform linux/amd64,linux/arm64 -t ${{ steps.login-ecr.outputs.registry }}/${{ vars.AWS_PUBLIC_ECR_ALIAS }}/invoke-javascript-client-qs .
 
       - name: build and push server container
+        if: github.event_name != 'pull_request'
         working-directory: invocation/javascript/server
         run: |
           docker buildx build --platform linux/amd64,linux/arm64 -t ${{ steps.login-ecr.outputs.registry }}/${{ vars.AWS_PUBLIC_ECR_ALIAS }}/invoke-javascript-server-qs .
