--- a/.github/workflows/invoke_python.yaml
+++ b/.github/workflows/invoke_python.yaml
@@ -3,7 +3,7 @@ name: python invocation quickstart
 on:
   push:
     branches:
-      - ongoing-fixes
+      - main
     paths:
       - .github/workflows/invoke_python.yaml
       - invocation/python/**
@@ -17,7 +17,10 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-
+    permissions:
+      contents: "read"
+      id-token: "write"
+    environment: shared-production
     if: github.repository_owner == 'diagridio'
     steps:
       - uses: actions/checkout@v3
@@ -32,35 +35,32 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r  ./client/requirements.txt && pip install -r ./server/requirements.txt
 
-  deploy:
-    runs-on: ubuntu-latest
-    if: github.event_name != 'pull_request'
-    permissions:
-      contents: "read"
-      id-token: "write"
-    environment: shared-production
-    steps:
       - name: Configure AWS credentials
+        if: github.event_name != 'pull_request'
         uses: aws-actions/configure-aws-credentials@v4
         with:
           role-to-assume: ${{ vars.AWS_CI_ROLE }}
           aws-region: ${{ vars.AWS_CI_REGION }}
 
       - name: Login to Amazon ECR
+        if: github.event_name != 'pull_request'
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@v2
         with:
           registry-type: public
 
       - name: Set up Docker Buildx
+        if: github.event_name != 'pull_request'
         uses: docker/setup-buildx-action@v3.6.1
 
       - name: build and push client image
+        if: github.event_name != 'pull_request'
+        working-directory: invocation/python/client
         run: |
-          cd invocation/python/client
           docker buildx build --platform linux/amd64,linux/arm64 -t ${{ steps.login-ecr.outputs.registry }}/${{ vars.AWS_PUBLIC_ECR_ALIAS }}/invoke-python-client-qs .
 
       - name: build and push server image
+        if: github.event_name != 'pull_request'
         working-directory: invocation/python/server
         run: |
           docker buildx build --platform linux/amd64,linux/arm64 -t ${{ steps.login-ecr.outputs.registry }}/${{ vars.AWS_PUBLIC_ECR_ALIAS }}/invoke-python-server-qs .
