--- a/.github/workflows/state_java.yaml
+++ b/.github/workflows/state_java.yaml
@@ -3,11 +3,16 @@ name: java state quickstart
 on:
   push:
     branches:
-      - "ongoing-fixes"
+      - main
     paths:
       - .github/workflows/state_java.yaml
       - state/java/**
-
+  pull_request:
+    branches:
+      - main
+    paths:
+      - .github/workflows/state_java.yaml
+      - state/java/**
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -15,7 +20,7 @@ jobs:
       contents: "read"
       id-token: "write"
     environment: shared-production
-    # Only run on main repo (not on forks)
+
     if: github.repository_owner == 'diagridio'
     steps:
       - uses: actions/checkout@v3
@@ -44,9 +49,11 @@ jobs:
           registry-type: public
 
       - name: Set up Docker Buildx
+        if: github.event_name != 'pull_request'
         uses: docker/setup-buildx-action@v3.6.1
 
       - name: build and push order-app image
+        if: github.event_name != 'pull_request'
         working-directory: state/java
         run: |
           docker buildx build --platform linux/amd64,linux/arm64 -t ${{ steps.login-ecr.outputs.registry }}/${{ vars.AWS_PUBLIC_ECR_ALIAS }}/state-java-qs . --push
