--- a/invocation/python/server/requirements.txt
+++ b/invocation/python/server/requirements.txt
@@ -1,8 +1,8 @@
-dapr==1.14.0rc1
+dapr==1.14.0
 fastapi==0.111.0
 grpcio==1.63.0
 pydantic==2.4.2
-requests==2.32.0
+requests==2.32.3
 uvicorn==0.23.2
 aiohttp==3.10.2
 certifi>=2024.02.02
