--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,8 @@
 # Created by https://www.toptal.com/developers/gitignore/api/csharp,java
 # Edit at https://www.toptal.com/developers/gitignore?templates=csharp,java
 
+.vscode
+
 # Mac OS
 .DS_Store
 
