--- a/invocation/python/server/requirements.txt
+++ b/invocation/python/server/requirements.txt
@@ -2,7 +2,7 @@ dapr==1.14.0
 fastapi==0.111.0
 grpcio==1.63.0
 pydantic==2.4.2
-requests==2.32.3
+requests>=2.32.4
 uvicorn==0.23.2
-aiohttp==3.11.8
+aiohttp >= 3.12.14
 certifi>=2024.02.02
