--- a/workflow/csharp/dev-csharp-workflow.yaml
+++ b/workflow/csharp/dev-csharp-workflow.yaml
@@ -1,24 +1,26 @@
 version: 1
 common:
-    appLogDestination: console
+  appLogDestination: console
+  enableAppHealthCheck:
+    false
+    # appHealthCheckPath: /healthz
+    # appHealthProbeInterval: 5
+    # appHealthProbeTimeout: 500
+    # appHealthThreshold: 3
+apps:
+  - appID: order-workflow
+    appPort: 0
+    appDirPath: .
+    command:
+      - dotnet
+      - run
+    appProtocol: http
+    logLevel: info
     enableAppHealthCheck: false
+    env:
+      ASPNETCORE_URLS: "http://+:5001"
       # appHealthCheckPath: /healthz
       # appHealthProbeInterval: 5
       # appHealthProbeTimeout: 500
       # appHealthThreshold: 3
-apps:
-    - appID: order-workflow
-      appPort: 0
-      appDirPath: .
-      command:
-      - dotnet
-      - run
-      appProtocol: http
-      logLevel: info
-      enableAppHealthCheck: false
-        # appHealthCheckPath: /healthz
-        # appHealthProbeInterval: 5
-        # appHealthProbeTimeout: 500
-        # appHealthThreshold: 3
-      appLogDestination: console
- 
+    appLogDestination: console
