--- a/workflow/java/pom.xml
+++ b/workflow/java/pom.xml
@@ -6,15 +6,14 @@
   <parent>
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-parent</artifactId>
-    <version>3.4.5</version>
+    <version>3.4.6</version>
     <relativePath /> <!-- lookup parent from repository -->
   </parent>
 
-  <groupId>com.service</groupId>
   <artifactId>workflow-app</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
   <name>workflow-app</name>
   <description>Catalyst Workflow Quickstart</description>
+  <version>1.0.0</version>
 
   <properties>
     <java.version>17</java.version>
@@ -23,9 +22,12 @@
   <dependencies>
     <dependency>
       <groupId>org.springframework.boot</groupId>
-      <artifactId>spring-boot-starter</artifactId>
+      <artifactId>spring-boot-starter-actuator</artifactId>
     </dependency>
-
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-web</artifactId>
+    </dependency>
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-test</artifactId>
@@ -33,14 +35,15 @@
     </dependency>
 
     <dependency>
-      <groupId>org.springframework.boot</groupId>
-      <artifactId>spring-boot-starter-web</artifactId>
-    </dependency>
-
-    <dependency>
       <groupId>io.dapr.spring</groupId>
       <artifactId>dapr-spring-boot-starter</artifactId>
-      <version>0.15.0-rc-5</version>
+      <version>1.16.0</version>
+    </dependency>
+    
+    <dependency>
+      <groupId>org.json</groupId>
+      <artifactId>json</artifactId>
+      <version>20240303</version>
     </dependency>
   </dependencies>
 
