Update Dapr.Client package to version 1.16.0 across C#, Java, Python, and JavaScript projects. Refactor state management configurations to use 'statestore' instead of 'kvstore', enhance health check responses, and improve error handling in API endpoints. Introduce new statestore.yaml files to ensure managed service creation

--- a/state/csharp/dev-csharp-state.yaml
+++ b/state/csharp/dev-csharp-state.yaml
@@ -1,26 +1,29 @@
 version: 1
 common:
-    appLogDestination: console
-    resourcesPaths:
-      - kvstore.yaml
-    enableAppHealthCheck: false
+  appLogDestination: console
+  resourcesPaths:
+    - statestore.yaml
+  enableAppHealthCheck:
+    false
+    # appHealthCheckPath: /healthz
+    # appHealthProbeInterval: 5
+    # appHealthProbeTimeout: 500
+    # appHealthThreshold: 3
+apps:
+  - appID: order-app
+    appPort: 0
+    appDirPath: .
+    command:
+      - dotnet
+      - run
+    appProtocol: http
+    logLevel: info
+    env:
+      ASPNETCORE_URLS: "http://+:5001"
+    enableAppHealthCheck:
+      false
       # appHealthCheckPath: /healthz
       # appHealthProbeInterval: 5
       # appHealthProbeTimeout: 500
       # appHealthThreshold: 3
-apps:
-    - appID: order-app
-      appPort: 0
-      appDirPath: .
-      command:
-      - dotnet
-      - run
-      appProtocol: http
-      logLevel: info
-      enableAppHealthCheck: false
-        # appHealthCheckPath: /healthz
-        # appHealthProbeInterval: 5
-        # appHealthProbeTimeout: 500
-        # appHealthThreshold: 3
-      appLogDestination: console
- 
+    appLogDestination: console
