--- a/state/java/dev-java-state.yaml
+++ b/state/java/dev-java-state.yaml
@@ -1,28 +1,28 @@
 version: 1
 common:
-    appLogDestination: console
-    resourcesPaths:
-      - kvstore.yaml
-    enableAppHealthCheck: false
+  appLogDestination: console
+  resourcesPaths:
+    - statestore.yaml
+  enableAppHealthCheck:
+    false
+    # appHealthCheckPath: /healthz
+    # appHealthProbeInterval: 5
+    # appHealthProbeTimeout: 500
+    # appHealthThreshold: 3
+apps:
+  - appID: order-app
+    appPort: 0
+    appDirPath: .
+    command:
+      - mvn
+      - spring-boot:run
+      - -Dspring-boot.run.arguments=--port=5001
+    appProtocol: http
+    logLevel: info
+    enableAppHealthCheck:
+      false
       # appHealthCheckPath: /healthz
       # appHealthProbeInterval: 5
       # appHealthProbeTimeout: 500
       # appHealthThreshold: 3
-apps:
-    - appID: order-app
-      appPort: 0
-      appDirPath: .
-      command:
-      - java
-      - -jar
-      - target/order-app-0.0.1-SNAPSHOT.jar 
-      - --port=5001
-      appProtocol: http
-      logLevel: info
-      enableAppHealthCheck: false
-        # appHealthCheckPath: /healthz
-        # appHealthProbeInterval: 5
-        # appHealthProbeTimeout: 500
-        # appHealthThreshold: 3
-      appLogDestination: console
- 
+    appLogDestination: console
